--- a/Leader/View/Base.lproj/LaunchScreen.storyboard
+++ b/Leader/View/Base.lproj/LaunchScreen.storyboard
@@ -16,15 +16,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch Screen" translatesAutoresizingMaskIntoConstraints="NO" id="eW9-CI-N7y">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="m3G-9z-tnD">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leader" translatesAutoresizingMaskIntoConstraints="NO" id="eW9-CI-N7y">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.082352941176470587" green="0.082352941176470587" blue="0.082352941176470587" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="m3G-9z-tnD" secondAttribute="trailing" id="MKy-6b-bcR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="m3G-9z-tnD" secondAttribute="bottom" id="QUo-45-TSS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="eW9-CI-N7y" secondAttribute="bottom" id="RAs-0k-oRc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eW9-CI-N7y" secondAttribute="trailing" id="htf-FP-wb3"/>
+                            <constraint firstItem="m3G-9z-tnD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="iuf-5I-mrU"/>
                             <constraint firstItem="eW9-CI-N7y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="orT-Vt-9KI"/>
+                            <constraint firstItem="m3G-9z-tnD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rru-7f-eIs"/>
                             <constraint firstItem="eW9-CI-N7y" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="ugv-2F-5Ea"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -36,6 +43,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Launch Screen" width="750" height="1334"/>
+        <image name="Background" width="750" height="1334"/>
+        <image name="Leader" width="750" height="1334"/>
     </resources>
 </document>
