--- a/Leader/View/SignUp.storyboard
+++ b/Leader/View/SignUp.storyboard
@@ -17,14 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="adC-Lm-2qF">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="587"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="567"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="yMV-Cq-mVh">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="587"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="567"/>
                                 </imageView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AWX-fo-LVY">
-                                    <rect key="frame" x="60" y="326" width="255" height="45"/>
+                                    <rect key="frame" x="60" y="306" width="255" height="45"/>
                                     <color key="backgroundColor" red="1" green="0.86666666670000003" blue="0.01176470588" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="45" id="euk-T7-CGO"/>
@@ -39,7 +39,7 @@
                                     </connections>
                                 </button>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ReG-ka-pV0">
-                                    <rect key="frame" x="60" y="277" width="255" height="34"/>
+                                    <rect key="frame" x="60" y="257" width="255" height="34"/>
                                     <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="20"/>
                                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     <connections>
@@ -47,7 +47,7 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6VG-nA-egR">
-                                    <rect key="frame" x="60" y="223" width="255" height="34"/>
+                                    <rect key="frame" x="60" y="203" width="255" height="34"/>
                                     <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -55,7 +55,7 @@
                                     </connections>
                                 </textField>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SkA-cR-n22">
-                                    <rect key="frame" x="162.5" y="507" width="50" height="30"/>
+                                    <rect key="frame" x="162.5" y="487" width="50" height="30"/>
                                     <state key="normal" title="Bypass"/>
                                     <connections>
                                         <segue destination="rNB-jg-Nxu" kind="show" id="pGz-KH-qkf"/>
@@ -240,7 +240,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="FdZ-zm-she">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="587"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="567"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Chapter Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ds2-Dw-QgM">
@@ -276,7 +276,7 @@
                                     </connections>
                                 </textField>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Chapter Description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xn5-Wi-Ttx">
-                                    <rect key="frame" x="50" y="301" width="275" height="66"/>
+                                    <rect key="frame" x="50" y="301" width="275" height="46"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -285,7 +285,7 @@
                                     </connections>
                                 </textView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9MX-Uh-P5H">
-                                    <rect key="frame" x="80" y="402" width="215" height="35"/>
+                                    <rect key="frame" x="80" y="382" width="215" height="35"/>
                                     <color key="backgroundColor" red="0.97785097359999995" green="0.86324322220000005" blue="0.29076632860000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="35" id="3Ut-d7-Vf6"/>
@@ -351,7 +351,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="JL6-6o-kbi">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="587"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="567"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Position" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BR0-sB-1gm">
@@ -497,7 +497,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="8fX-sy-ERy">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="627"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Adl-19-thr">
@@ -549,7 +549,7 @@
                                     </connections>
                                 </textField>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X5B-Jx-fvq">
-                                    <rect key="frame" x="130" y="399" width="115" height="40"/>
+                                    <rect key="frame" x="130" y="477" width="115" height="40"/>
                                     <color key="backgroundColor" red="1" green="0.85937339069999996" blue="0.011647096839999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="cp8-70-hti"/>
@@ -563,6 +563,32 @@
                                         <segue destination="rNB-jg-Nxu" kind="show" identifier="goToTabs" id="1hT-wV-cpB"/>
                                     </connections>
                                 </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Quj-XY-pas">
+                                    <rect key="frame" x="50" y="409" width="35" height="35"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="35" id="qQg-Cz-g7u"/>
+                                        <constraint firstAttribute="height" constant="35" id="vZd-UU-ef6"/>
+                                    </constraints>
+                                    <state key="normal" image="Nothing"/>
+                                    <connections>
+                                        <action selector="checkmarkPressed:" destination="QjX-Ti-rJb" eventType="touchUpInside" id="ec4-tU-3V9"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pCu-Cb-qPD">
+                                    <rect key="frame" x="95" y="409" width="270" height="33"/>
+                                    <state key="normal">
+                                        <attributedString key="attributedTitle">
+                                            <fragment content="I agree to Leader's Terms of Use">
+                                                <attributes>
+                                                    <font key="NSFont" metaFont="system" size="17"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                    </state>
+                                    <connections>
+                                        <segue destination="QL7-KU-916" kind="show" id="i3c-SV-Vcd"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" red="0.066666666669999999" green="0.31764705879999999" blue="0.45098039220000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <constraints>
@@ -570,11 +596,13 @@
                                 <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="RGs-Qa-gGd" secondAttribute="trailing" constant="50" id="5cg-QR-wPg"/>
                                 <constraint firstItem="hgJ-W3-MQK" firstAttribute="top" secondItem="5zC-dC-biR" secondAttribute="bottom" constant="15" id="6Sl-0s-6MS"/>
                                 <constraint firstItem="5zC-dC-biR" firstAttribute="top" secondItem="Tec-wF-Ayz" secondAttribute="bottom" constant="15" id="6cf-Al-4sv"/>
+                                <constraint firstItem="X5B-Jx-fvq" firstAttribute="top" secondItem="pCu-Cb-qPD" secondAttribute="bottom" constant="35" id="84U-KC-qyC"/>
                                 <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="5zC-dC-biR" secondAttribute="trailing" constant="50" id="DKH-7z-0Pd"/>
                                 <constraint firstItem="X5B-Jx-fvq" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="130" id="Dx3-FM-188"/>
+                                <constraint firstItem="pCu-Cb-qPD" firstAttribute="leading" secondItem="Quj-XY-pas" secondAttribute="trailing" constant="10" id="HLD-ze-CO0"/>
                                 <constraint firstItem="Adl-19-thr" firstAttribute="top" secondItem="4kc-hh-4cX" secondAttribute="top" constant="100" id="HWP-Gy-dRy"/>
                                 <constraint firstItem="5zC-dC-biR" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="KL2-Ul-msj"/>
-                                <constraint firstItem="X5B-Jx-fvq" firstAttribute="top" secondItem="nWU-Mb-N8h" secondAttribute="bottom" constant="20" id="RWG-OM-U7N"/>
+                                <constraint firstItem="pCu-Cb-qPD" firstAttribute="top" secondItem="nWU-Mb-N8h" secondAttribute="bottom" constant="30" id="Yyq-U7-sd5"/>
                                 <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="Adl-19-thr" secondAttribute="trailing" constant="50" id="bJc-Sk-8hg"/>
                                 <constraint firstItem="nWU-Mb-N8h" firstAttribute="top" secondItem="RGs-Qa-gGd" secondAttribute="bottom" constant="15" id="bZr-fr-MsC"/>
                                 <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="Tec-wF-Ayz" secondAttribute="trailing" constant="50" id="bdH-IE-HBT"/>
@@ -583,8 +611,11 @@
                                 <constraint firstItem="Adl-19-thr" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="f05-3e-maw"/>
                                 <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="X5B-Jx-fvq" secondAttribute="trailing" constant="130" id="gkI-Iy-6eq"/>
                                 <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="hgJ-W3-MQK" secondAttribute="trailing" constant="50" id="kkK-mf-zdj"/>
+                                <constraint firstItem="Quj-XY-pas" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="lDZ-TK-2sC"/>
                                 <constraint firstItem="Tec-wF-Ayz" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="mJh-6U-eTd"/>
                                 <constraint firstItem="nWU-Mb-N8h" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="nXe-Ti-tu2"/>
+                                <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="pCu-Cb-qPD" secondAttribute="trailing" constant="10" id="oh1-PG-3hx"/>
+                                <constraint firstItem="Quj-XY-pas" firstAttribute="top" secondItem="nWU-Mb-N8h" secondAttribute="bottom" constant="30" id="sAc-vK-VrF"/>
                                 <constraint firstItem="RGs-Qa-gGd" firstAttribute="top" secondItem="hgJ-W3-MQK" secondAttribute="bottom" constant="15" id="sc4-bC-N3o"/>
                                 <constraint firstItem="RGs-Qa-gGd" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="slL-XV-oIV"/>
                             </constraints>
@@ -598,23 +629,36 @@
                     <navigationItem key="navigationItem" id="IxZ-t0-MLO"/>
                     <connections>
                         <outlet property="advisorTF" destination="5zC-dC-biR" id="MDU-k8-MEP"/>
+                        <outlet property="checkmarkButton" destination="Quj-XY-pas" id="oYB-eW-lei"/>
                         <outlet property="emailTF" destination="RGs-Qa-gGd" id="gT4-gv-vts"/>
                         <outlet property="gradeTF" destination="hgJ-W3-MQK" id="zUt-4A-RkH"/>
                         <outlet property="nameTF" destination="Adl-19-thr" id="wf1-g9-J4b"/>
                         <outlet property="passwordTF" destination="nWU-Mb-N8h" id="4CO-hI-aPC"/>
                         <outlet property="schoolTF" destination="Tec-wF-Ayz" id="V35-UC-Zmr"/>
+                        <outlet property="termsOfUseButton" destination="pCu-Cb-qPD" id="xEI-Sh-N7d"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CnY-71-HRv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1023" y="439"/>
+            <point key="canvasLocation" x="-1023.2" y="438.53073463268368"/>
+        </scene>
+        <!--TermsOfUse-->
+        <scene sceneID="eK1-Jc-A4K">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Main" referencedIdentifier="TermsOfUse" id="QL7-KU-916" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="MAM-kh-2aP"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4A8-PG-c7T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-313" y="578"/>
         </scene>
     </scenes>
     <resources>
         <image name="Background" width="750" height="1334"/>
         <image name="Leader3" width="850" height="350"/>
+        <image name="Nothing" width="45" height="45"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ThS-Nd-GO2"/>
+        <segue reference="1hT-wV-cpB"/>
     </inferredMetricsTieBreakers>
 </document>
